[java][module path] choose test/production output depending on corresponding module-info.java placement (IDEA-272928)
otherwise, module in production may be included as its (absent) test output root

GitOrigin-RevId: 299a795edffa255eb4b8e189994276c2eaabd204